WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175860
[Win] Fix compile errors.
https://bugs.webkit.org/show_bug.cgi?id=175860
Summary
[Win] Fix compile errors.
Per Arne Vollan
Reported
2017-08-22 16:28:17 PDT
There are currently a couple of compile errors in CookieJarCFNet.cpp on Windows.
Attachments
Patch
(1.52 KB, patch)
2017-08-22 16:33 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-08-22 16:33:04 PDT
Created
attachment 318822
[details]
Patch
Brent Fulgham
Comment 2
2017-08-22 16:37:56 PDT
Comment on
attachment 318822
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=318822&action=review
r=me.
> Source/WebCore/platform/network/cf/CookieJarCFNet.cpp:62 > +DECLARE_CF_TYPE_TRAIT(CFHTTPCookie);
Doh!
WebKit Commit Bot
Comment 3
2017-08-22 17:06:54 PDT
Comment on
attachment 318822
[details]
Patch Clearing flags on attachment: 318822 Committed
r221058
: <
http://trac.webkit.org/changeset/221058
>
WebKit Commit Bot
Comment 4
2017-08-22 17:06:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-08-22 17:07:19 PDT
<
rdar://problem/34025297
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug