[Win] Fix compile errors. https://bugs.webkit.org/show_bug.cgi?id=175860

Reviewed by Brent Fulgham.

Add required header files.

* platform/network/cf/CookieJarCFNet.cpp:


Canonical link: https://commits.webkit.org/192513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221058 268f45cc-cd09-0410-ab3c-d52691b4dbfc